# igdllbot

./: .gitignore  .python-version  README.md  main.py  pyproject.toml
bot/: __init__.py  config.py
bot/plugins/: parse_url.py  ping.py
bot/utils/: watchlog.py
bot/utils/validators/: __init__.py  is_int.py
